compiler/gen/crustParser.py
# Generated from /home/ivan/Documents/Github/UNIFESP/compiler_antlr/crust.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class crustParser ( Parser ):

    grammarFileName = "crust.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'let'", "':'", "';'", "'fn'", "'('", 
                     "','", "')'", "'{'", "'}'", "'='", "'if'", "'else'", 
                     "'while'", "'return'", "'+'", "'-'", "'*'", "'/'", 
                     "'['", "']'", "'int'", "'void'", "'=='", "'!='", "'<='", 
                     "'>='", "'<'", "'>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "OP_eq", "OP_ne", 
                      "OP_le", "OP_ge", "OP_lt", "OP_gt", "ID", "NUMBER", 
                      "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_variableDecl = 1
    RULE_functionDecl = 2
    RULE_functionParamsDecl = 3
    RULE_stmt = 4
    RULE_stmt_expr = 5
    RULE_stmt_assign = 6
    RULE_stmt_if = 7
    RULE_stmt_while = 8
    RULE_stmt_return = 9
    RULE_condition = 10
    RULE_expr = 11
    RULE_factor = 12
    RULE_term = 13
    RULE_functionCall = 14
    RULE_variable = 15
    RULE_typeDecl = 16

    ruleNames =  [ "program", "variableDecl", "functionDecl", "functionParamsDecl", 
                   "stmt", "stmt_expr", "stmt_assign", "stmt_if", "stmt_while", 
                   "stmt_return", "condition", "expr", "factor", "term", 
                   "functionCall", "variable", "typeDecl" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    OP_eq=23
    OP_ne=24
    OP_le=25
    OP_ge=26
    OP_lt=27
    OP_gt=28
    ID=29
    NUMBER=30
    WS=31
    COMMENT=32
    LINE_COMMENT=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(crustParser.VariableDeclContext)
            else:
                return self.getTypedRuleContext(crustParser.VariableDeclContext,i)


        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(crustParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(crustParser.FunctionDeclContext,i)


        def getRuleIndex(self):
            return crustParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = crustParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==crustParser.T__0:
                self.state = 34
                self.variableDecl()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==crustParser.T__3:
                self.state = 40
                self.functionDecl()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(crustParser.ID, 0)

        def typeDecl(self):
            return self.getTypedRuleContext(crustParser.TypeDeclContext,0)


        def getRuleIndex(self):
            return crustParser.RULE_variableDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDecl" ):
                listener.enterVariableDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDecl" ):
                listener.exitVariableDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDecl" ):
                return visitor.visitVariableDecl(self)
            else:
                return visitor.visitChildren(self)




    def variableDecl(self):

        localctx = crustParser.VariableDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_variableDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(crustParser.T__0)
            self.state = 47
            self.match(crustParser.ID)
            self.state = 48
            self.match(crustParser.T__1)
            self.state = 49
            self.typeDecl()
            self.state = 50
            self.match(crustParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._functionParamsDecl = None # FunctionParamsDeclContext
            self.params = list() # of FunctionParamsDeclContexts

        def ID(self):
            return self.getToken(crustParser.ID, 0)

        def typeDecl(self):
            return self.getTypedRuleContext(crustParser.TypeDeclContext,0)


        def variableDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(crustParser.VariableDeclContext)
            else:
                return self.getTypedRuleContext(crustParser.VariableDeclContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(crustParser.StmtContext)
            else:
                return self.getTypedRuleContext(crustParser.StmtContext,i)


        def functionParamsDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(crustParser.FunctionParamsDeclContext)
            else:
                return self.getTypedRuleContext(crustParser.FunctionParamsDeclContext,i)


        def getRuleIndex(self):
            return crustParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = crustParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(crustParser.T__3)
            self.state = 53
            self.match(crustParser.ID)
            self.state = 54
            self.match(crustParser.T__4)
            self.state = 60
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 55
                    localctx._functionParamsDecl = self.functionParamsDecl()
                    localctx.params.append(localctx._functionParamsDecl)
                    self.state = 56
                    self.match(crustParser.T__5) 
                self.state = 62
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==crustParser.ID:
                self.state = 63
                localctx._functionParamsDecl = self.functionParamsDecl()
                localctx.params.append(localctx._functionParamsDecl)


            self.state = 66
            self.match(crustParser.T__6)
            self.state = 67
            self.match(crustParser.T__1)
            self.state = 68
            self.typeDecl()
            self.state = 69
            self.match(crustParser.T__7)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==crustParser.T__0:
                self.state = 70
                self.variableDecl()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << crustParser.T__4) | (1 << crustParser.T__10) | (1 << crustParser.T__12) | (1 << crustParser.T__13) | (1 << crustParser.ID) | (1 << crustParser.NUMBER))) != 0):
                self.state = 76
                self.stmt()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self.match(crustParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionParamsDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(crustParser.ID, 0)

        def typeDecl(self):
            return self.getTypedRuleContext(crustParser.TypeDeclContext,0)


        def getRuleIndex(self):
            return crustParser.RULE_functionParamsDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionParamsDecl" ):
                listener.enterFunctionParamsDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionParamsDecl" ):
                listener.exitFunctionParamsDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionParamsDecl" ):
                return visitor.visitFunctionParamsDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionParamsDecl(self):

        localctx = crustParser.FunctionParamsDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionParamsDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(crustParser.ID)
            self.state = 85
            self.match(crustParser.T__1)
            self.state = 86
            self.typeDecl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt_expr(self):
            return self.getTypedRuleContext(crustParser.Stmt_exprContext,0)


        def stmt_assign(self):
            return self.getTypedRuleContext(crustParser.Stmt_assignContext,0)


        def stmt_if(self):
            return self.getTypedRuleContext(crustParser.Stmt_ifContext,0)


        def stmt_while(self):
            return self.getTypedRuleContext(crustParser.Stmt_whileContext,0)


        def stmt_return(self):
            return self.getTypedRuleContext(crustParser.Stmt_returnContext,0)


        def getRuleIndex(self):
            return crustParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = crustParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stmt)
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.stmt_expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.stmt_assign()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 90
                self.stmt_if()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 91
                self.stmt_while()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 92
                self.stmt_return()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Stmt_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(crustParser.ExprContext,0)


        def getRuleIndex(self):
            return crustParser.RULE_stmt_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_expr" ):
                listener.enterStmt_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_expr" ):
                listener.exitStmt_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_expr" ):
                return visitor.visitStmt_expr(self)
            else:
                return visitor.visitChildren(self)




    def stmt_expr(self):

        localctx = crustParser.Stmt_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stmt_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.expr(0)
            self.state = 96
            self.match(crustParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Stmt_assignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(crustParser.VariableContext,0)


        def expr(self):
            return self.getTypedRuleContext(crustParser.ExprContext,0)


        def getRuleIndex(self):
            return crustParser.RULE_stmt_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_assign" ):
                listener.enterStmt_assign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_assign" ):
                listener.exitStmt_assign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_assign" ):
                return visitor.visitStmt_assign(self)
            else:
                return visitor.visitChildren(self)




    def stmt_assign(self):

        localctx = crustParser.Stmt_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_stmt_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.variable()
            self.state = 99
            self.match(crustParser.T__9)
            self.state = 100
            self.expr(0)
            self.state = 101
            self.match(crustParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Stmt_ifContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.if_body = None # StmtContext
            self.else_body = None # StmtContext

        def condition(self):
            return self.getTypedRuleContext(crustParser.ConditionContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(crustParser.StmtContext)
            else:
                return self.getTypedRuleContext(crustParser.StmtContext,i)


        def getRuleIndex(self):
            return crustParser.RULE_stmt_if

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_if" ):
                listener.enterStmt_if(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_if" ):
                listener.exitStmt_if(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_if" ):
                return visitor.visitStmt_if(self)
            else:
                return visitor.visitChildren(self)




    def stmt_if(self):

        localctx = crustParser.Stmt_ifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stmt_if)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(crustParser.T__10)
            self.state = 104
            self.condition()
            self.state = 105
            self.match(crustParser.T__7)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << crustParser.T__4) | (1 << crustParser.T__10) | (1 << crustParser.T__12) | (1 << crustParser.T__13) | (1 << crustParser.ID) | (1 << crustParser.NUMBER))) != 0):
                self.state = 106
                localctx.if_body = self.stmt()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 112
            self.match(crustParser.T__8)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==crustParser.T__11:
                self.state = 113
                self.match(crustParser.T__11)
                self.state = 114
                self.match(crustParser.T__7)
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << crustParser.T__4) | (1 << crustParser.T__10) | (1 << crustParser.T__12) | (1 << crustParser.T__13) | (1 << crustParser.ID) | (1 << crustParser.NUMBER))) != 0):
                    self.state = 115
                    localctx.else_body = self.stmt()
                    self.state = 120
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 121
                self.match(crustParser.T__8)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Stmt_whileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(crustParser.ConditionContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(crustParser.StmtContext)
            else:
                return self.getTypedRuleContext(crustParser.StmtContext,i)


        def getRuleIndex(self):
            return crustParser.RULE_stmt_while

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_while" ):
                listener.enterStmt_while(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_while" ):
                listener.exitStmt_while(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_while" ):
                return visitor.visitStmt_while(self)
            else:
                return visitor.visitChildren(self)




    def stmt_while(self):

        localctx = crustParser.Stmt_whileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_stmt_while)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(crustParser.T__12)
            self.state = 125
            self.condition()
            self.state = 126
            self.match(crustParser.T__7)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << crustParser.T__4) | (1 << crustParser.T__10) | (1 << crustParser.T__12) | (1 << crustParser.T__13) | (1 << crustParser.ID) | (1 << crustParser.NUMBER))) != 0):
                self.state = 127
                self.stmt()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 133
            self.match(crustParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Stmt_returnContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(crustParser.ExprContext,0)


        def getRuleIndex(self):
            return crustParser.RULE_stmt_return

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_return" ):
                listener.enterStmt_return(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_return" ):
                listener.exitStmt_return(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_return" ):
                return visitor.visitStmt_return(self)
            else:
                return visitor.visitChildren(self)




    def stmt_return(self):

        localctx = crustParser.Stmt_returnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stmt_return)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(crustParser.T__13)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << crustParser.T__4) | (1 << crustParser.ID) | (1 << crustParser.NUMBER))) != 0):
                self.state = 136
                self.expr(0)


            self.state = 139
            self.match(crustParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # ExprContext
            self.relational = None # Token
            self.right = None # ExprContext

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(crustParser.ExprContext)
            else:
                return self.getTypedRuleContext(crustParser.ExprContext,i)


        def OP_eq(self):
            return self.getToken(crustParser.OP_eq, 0)

        def OP_ne(self):
            return self.getToken(crustParser.OP_ne, 0)

        def OP_le(self):
            return self.getToken(crustParser.OP_le, 0)

        def OP_ge(self):
            return self.getToken(crustParser.OP_ge, 0)

        def OP_lt(self):
            return self.getToken(crustParser.OP_lt, 0)

        def OP_gt(self):
            return self.getToken(crustParser.OP_gt, 0)

        def getRuleIndex(self):
            return crustParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = crustParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            localctx.left = self.expr(0)
            self.state = 142
            localctx.relational = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << crustParser.OP_eq) | (1 << crustParser.OP_ne) | (1 << crustParser.OP_le) | (1 << crustParser.OP_ge) | (1 << crustParser.OP_lt) | (1 << crustParser.OP_gt))) != 0)):
                localctx.relational = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 143
            localctx.right = self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def factor(self):
            return self.getTypedRuleContext(crustParser.FactorContext,0)


        def expr(self):
            return self.getTypedRuleContext(crustParser.ExprContext,0)


        def getRuleIndex(self):
            return crustParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = crustParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.factor(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 153
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = crustParser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 148
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 149
                    localctx.op = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not(_la==crustParser.T__14 or _la==crustParser.T__15):
                        localctx.op = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 150
                    self.factor(0) 
                self.state = 155
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class FactorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def term(self):
            return self.getTypedRuleContext(crustParser.TermContext,0)


        def factor(self):
            return self.getTypedRuleContext(crustParser.FactorContext,0)


        def getRuleIndex(self):
            return crustParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)



    def factor(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = crustParser.FactorContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_factor, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.term()
            self._ctx.stop = self._input.LT(-1)
            self.state = 164
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = crustParser.FactorContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_factor)
                    self.state = 159
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 160
                    localctx.op = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not(_la==crustParser.T__16 or _la==crustParser.T__17):
                        localctx.op = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 161
                    self.term() 
                self.state = 166
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(crustParser.NUMBER, 0)

        def variable(self):
            return self.getTypedRuleContext(crustParser.VariableContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(crustParser.FunctionCallContext,0)


        def expr(self):
            return self.getTypedRuleContext(crustParser.ExprContext,0)


        def getRuleIndex(self):
            return crustParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)
